# listar-processos-sei

./: .env.example  .gitignore  README.md  listar_processos_sei.py  pyproject.toml  requirements.txt
