[project]
name = "listar-processos-sei"
version = "0.1.0"
description = "Lista processos do SEI e exporta metadados para Excel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.uv]
package = true

[tool.pyright]
reportUnknownMemberType = false
reportUnknownArgumentType = false
